@@ -1,3 +1,8 @@
+2005-08-14  Mark McLoughlin  <mark@skynet.ie>
+
+	* simple-editor/GMenuSimpleEditor/main.py:
+	Fix a python syntax warning.
+
 2005-08-12  Mark McLoughlin  <mark@skynet.ie>
 
 	Fixes bug #313232 - memory corruption issue where notifies
